[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/client_demo.gd" id="1_client_demo"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_client_demo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Not connected"

[node name="RTTLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "RTT: N/A"

[node name="URLInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Server URL (e.g., ws://localhost:8080)"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="MessageInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Type message to send..."

[node name="SendButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Send Message"

[node name="LogText" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Connection log will appear here..."
editable = false
